# cpp_undistort_video_maker

./: .gitignore  CMakeLists.txt  README.md  main.cpp  video_config.json  vpi_config.json
include/: func_undistort.h  my_json.h
json_tmp/: room1_save.json  room2_save.json
src/: func_undistort.cpp  my_json.cpp
